--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -24,7 +24,7 @@
                         </div>
                     </form>
                     <hr class="my-4">
-                    <a href="/oauth2/authorization/google" class="btn btn-outline-danger btn-block">
+                    <a href="http://localhost:8080/oauth2/authorization/google" class="btn btn-outline-danger btn-block">
                         Login with Google
                     </a>
                     <p class="mt-3">Don't have an account?
@@ -36,7 +36,16 @@
     </div>
 </div>
 <th:block th:replace="~{layout::footer}"></th:block>
-
+<script src="../../jquery/jquery.min.js"></script>
+<script src="../../lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../lib/wow/wow.min.js"></script>
+<script src="../../lib/easing/easing.min.js"></script>
+<script src="../../lib/waypoints/waypoints.min.js"></script>
+<script src="../../lib/counterup/counterup.min.js"></script>
+<script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="../../lib/tempusdominus/js/moment.min.js"></script>
+<script src="../../lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="../../js/tempusdominus-bootstrap-4.min.js"></script>
 <!-- Nhúng JavaScript -->
 <script>
     document.addEventListener('DOMContentLoaded', () => {
