--- a/src/main/resources/templates/auth/forgotPassword.html
+++ b/src/main/resources/templates/auth/forgotPassword.html
@@ -24,7 +24,7 @@
                         </div>
                     </form>
                     <p class="mt-3">
-                        <a class="text-danger" th:href="@{/auth/login}">Back to Login</a>
+                        <a class="text-info" th:href="@{/auth/login}">Back to Login</a>
                     </p>
                 </div>
             </div>
@@ -32,5 +32,19 @@
     </div>
 </div>
 <th:block th:replace="~{layout::footer}"></th:block>
+
+
+
+<!--Lib-->
+<script src="../../jquery/jquery.min.js"></script>
+<script src="../../lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../lib/wow/wow.min.js"></script>
+<script src="../../lib/easing/easing.min.js"></script>
+<script src="../../lib/waypoints/waypoints.min.js"></script>
+<script src="../../lib/counterup/counterup.min.js"></script>
+<script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="../../lib/tempusdominus/js/moment.min.js"></script>
+<script src="../../lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="../../js/tempusdominus-bootstrap-4.min.js"></script>
 </body>
 </html>
