--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -26,9 +26,13 @@
                             <label for="username"></label>
                             <input type="text" class="form-control" required id="username" name="username" placeholder="Enter your username">
                         </div>
-                        <div class="form-group mb-4">
-                            <label for="password"></label>
-                            <input type="password" class="form-control" required id="password" name="password" placeholder="Enter your password">
+                        <div class="form-group mb-4 position-relative">
+                            <input type="password" id="password" class="form-control" placeholder="Password" required>
+                            <span id="togglePassword"
+                                  class="position-absolute top-50 end-0 translate-middle-y me-3"
+                                  style="cursor: pointer;">
+                                  <i class="bi bi-eye"></i>
+                            </span>
                         </div>
                         <div class="form-group mb-4">
                             <label for="phone"></label>
@@ -36,7 +40,7 @@
                         </div>
                         <div class="d-grid gap-2 form-action">
                             <button type="submit" class="btn btn-primary btn-lg btn-block">Sign up</button>
-                            <p class="mt-3 mb-0">Already have an account? <a class="text-info text-center" th:href="@{/auth/login}">Login ?</a></p>
+                            <p class="mt-3 mb-0">Already have an account? <a class="text-info text-center" th:href="@{/auth/login}">Login</a></p>
                         </div>
                     </form>
                 </div>
@@ -45,6 +49,25 @@
     </div>
 </div>
 <th:block th:replace="~{layout::footer}"></th:block>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const passwordInput = document.getElementById('password');
+        const togglePassword = document.getElementById('togglePassword');
+
+        togglePassword.addEventListener('click', () => {
+            const isPasswordVisible = passwordInput.type === 'text';
+
+            passwordInput.type = isPasswordVisible ? 'password' : 'text';
+
+            togglePassword.innerHTML = isPasswordVisible
+                ? '<i class="bi bi-eye"></i>'
+                : '<i class="bi bi-eye-slash"></i>';
+        });
+    });
+</script>
+
+<!--lib-->
 <script src="../../jquery/jquery.min.js"></script>
 <script src="../../lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../../lib/wow/wow.min.js"></script>
