--- a/src/main/resources/templates/auth/resetPassword.html
+++ b/src/main/resources/templates/auth/resetPassword.html
@@ -35,5 +35,19 @@
         </div>
     </div>
 </div>
+
+
+
+<!--Lib-->
+<script src="../../jquery/jquery.min.js"></script>
+<script src="../../lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../lib/wow/wow.min.js"></script>
+<script src="../../lib/easing/easing.min.js"></script>
+<script src="../../lib/waypoints/waypoints.min.js"></script>
+<script src="../../lib/counterup/counterup.min.js"></script>
+<script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="../../lib/tempusdominus/js/moment.min.js"></script>
+<script src="../../lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="../../js/tempusdominus-bootstrap-4.min.js"></script>
 </body>
 </html>
